...
          <Animated.Text
            style={[
              styles.title,
              {color: colors.text},
              containerStyle,
            ]}>
            VoiceFX
          </Animated.Text>
          <Animated.Text
            style={[
              styles.subtitle,
              {color: colors.textSecondary},
              containerStyle,
...
